# weather_starter

./: AGENTS.md  mkdocs.yml  prototype.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: alerts.py
backend/app/services/: alerts.py  test_alerts.py  weather_api.py
docs/: api-reference.md  architecture.md  backend.md  frontend.md  index.md
frontend/src/api/: alerts.js
frontend/src/components/: AlertBanner.jsx  AlertModal.jsx
frontend/src/hooks/: useAlerts.jsx
frontend/src/pages/: Dashboard.jsx
