[project]
name = "weather-starter-backend"
version = "0.1.0"
description = "Weather Starter API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.408",
    "ruff>=0.15.10",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]
